# urdf_labs

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/roscpp_tutorials/: TwoIntsRequest.h  TwoIntsResponse.h
devel/include/rospy_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  BadTwoIntsRequest.h  BadTwoIntsResponse.h  Floats.h  HeaderString.h
devel/include/turtlesim/: Color.h  KillRequest.h  KillResponse.h  Pose.h  SetPenRequest.h  SetPenResponse.h  SpawnRequest.h  SpawnResponse.h  TeleportAbsoluteRequest.h  TeleportAbsoluteResponse.h  TeleportRelativeRequest.h  TeleportRelativeResponse.h
devel/lib/pkgconfig/: myrobot_control.pc  myrobot_description.pc  myrobot_simulator.pc  myrobot_teleop.pc  roscpp_tutorials.pc  rospy_tutorials.pc  turtlesim.pc
devel/lib/roscpp_tutorials/: add_two_ints_client  add_two_ints_server  add_two_ints_server_class  anonymous_listener  babbler  cached_parameters  custom_callback_processing  listener  listener_async_spin  listener_class  listener_multiple  listener_threaded_spin  listener_unreliable  listener_with_tracked_object  listener_with_userdata  node_handle_namespaces  notify_connect  (+3 more)
reports/: ПОВС_Лабораторная_2_21501_Кобыжев.docx  ПОВС_Лабораторная_3_21501_Кобыжев.docx  ПОВС_Лабораторная_4_21501_Кобыжев.docx
src/myrobot/myrobot_teleop/: CMakeLists.txt  package.xml
src/myrobot/myrobot_teleop/launch/: ir_auto_teleop.launch  lidar_auto_teleop.launch  teleop_auto.launch  teleop_keyboard.launch
src/myrobot/myrobot_teleop/nodes/: ir_auto_teleop  keyboard_teleop  keyboard_teleop.bak  lidar_auto_teleop
(+32 files in other folders)
