<?xml version="1.0"?>
<package format="2">
  <name>myrobot_teleop</name>
  <version>0.1.0</version>
  <description>The minicar_teleop package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="k104073r@mail.kyutech.jp">Ryodo Tanaka</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>
